--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Redux Dispatch Example</title>
 </head>
 <body>
-  
+  Initial input
   <script src="js/reducer.js"></script>
 </body>
 </html>
